# python-project-52

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
labels/: forms.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_title_rename_title_label_name.py  0003_alter_label_name.py
labels/tests/: test_forms.py  test_urls.py  test_views.py
statuses/: forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_title_rename_title_status_name.py  0003_alter_status_name.py
statuses/tests/: test_forms.py  test_urls.py  test_views.py
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  new_objects.json  statuses.json  tasks.json  users.json
task_manager/templates/: index.html
task_manager/tests/: test_urls.py  test_views.py
tasks/: filters.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_status.py  0002_rename_labeled_tasklabels.py  0002_tasks_description.py  0003_alter_task_executor_alter_task_label.py  0003_alter_tasks_author_alter_tasks_executive.py  0004_alter_task_label_alter_task_status.py  0004_alter_tasks_author_alter_tasks_executive_and_more.py  0005_alter_task_executor.py  0005_alter_tasks_author_alter_tasks_executive_and_more.py  0006_alter_labeled_task.py  0006_alter_tasks_status.py  0007_alter_task_title_rename_title_task_name.py  0007_labeled_task_delete_tasks_labeled_task.py  (+1 more)
users/: admin.py  apps.py  forms.py  urls.py  views.py
(+29 files in other folders)
