[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Team task manager app"
authors = ["Roman Poliakov <roman61394@gmail.com>"]
license = "CC0"
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
python-dotenv = "^0.21.0"
dj-database-url = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
