[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Team task manager app"
authors = ["Roman Poliakov <roman61394@gmail.com>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
python-dotenv = "^0.21.0"
dj-database-url = "^1.0.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.4"
django-bootstrap4 = "^22.2"
django-filter = "^22.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
